[package]
name = "tutor-db"
version = "0.1.0"
authors = ["jdawg24"]
edition = "2021"


[dependencies]
#Actix web framework and run-time
actix-web = "4.5.1"
actix-rt = "2.9.0"

# Environment access
dotenv = "0.15.0"

# Database access
sqlx = {version = "0.6.3", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}


# Data serialization library
serde = { version = "1.0.197", features = ["derive"] }

# Other utils
chrono = {version = "0.4.35", features = ["serde"]}

# Openssl for linux build
openssl = { version = "0.10.64", features = ["vendored"] }
